--- a/TodoApplication/MainWindow.xaml
+++ b/TodoApplication/MainWindow.xaml
@@ -1,10 +1,6 @@
 ﻿<Window x:Class="TodoApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TodoApplication"
-        mc:Ignorable="d"
         Title="TODO Keeper" Height="356" Width="470">
   <Grid>
     <Grid.RowDefinitions>
@@ -37,11 +33,16 @@
     <Grid Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="3" Background="Blue"
           HorizontalAlignment="Stretch">
       <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-        <TextBox Foreground="White" Padding="2" Margin="0,0,17,0"
+        <TextBlock Foreground="White" Padding="2" Margin="0,0,17,0"
                  FontWeight="SemiBold" x:Name="txtUserNm" />
-        <TextBox Foreground="White" Padding="2" Margin="0,0,10,0"
+        <TextBlock Foreground="White" Padding="2" Margin="0,0,10,0"
                  FontWeight="SemiBold" x:Name="txtMachineNm" />
       </StackPanel>
     </Grid>
   </Grid>
 </Window>
+
+<!--xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:TodoApplication"
+        mc:Ignorable="d"-->
